modificacion del container fluid

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     </div>
     </header>
-    <main class="container-fluid">
+    <main class="container">
 		<!--Elemento flotante-->
 		<div class="important--float">
             <a href="#construccion">
