error de los js

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@ imprentas como asimismo independiente en proyectos de posicionamiento de marca
   </a>
         </div>
     <!--Script del js -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
