--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
 <!--inicio del header-->
-<div class="sticky-top color-sticky">
+<div class="sticky-top color-sticky animation-nav">
   <div class="container">
-<nav class=" navbar navbar-expand-lg navbar-light nav-padding animation-nav border-bottomNew">
+<nav class=" navbar navbar-expand-lg navbar-light nav-padding  border-bottomNew">
   <div class="container-fluid p-2">
-    <a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="184.86" height="27.18" viewBox="0 0 184.86 27.18">
+    <a class="header__nav--logo"href="/">
+      <svg xmlns="http://www.w3.org/2000/svg" width="184.86" height="27.18" viewBox="0 0 184.86 27.18">
       <path id="Trazado_24" data-name="Trazado 24" d="M6.09,29.3c4.62,0,7.08-2.43,7.08-7.38V8H1.8v3.27H9.27V22.13C9.27,24.71,8.16,26,6,26a5.093,5.093,0,0,1-4.17-2.4L-.39,26.27A7.92,7.92,0,0,0,6.09,29.3Zm19.38-.09c4.98,0,8.55-3.42,8.55-8.22s-3.57-8.19-8.55-8.19c-4.92,0-8.52,3.39-8.52,8.19S20.55,29.21,25.47,29.21Zm0-3.21a4.659,4.659,0,0,1-4.74-5.01,4.761,4.761,0,1,1,9.51,0A4.666,4.666,0,0,1,25.47,26ZM41.19,15.32V12.98H37.62V29h3.75V21.23c0-3.27,1.8-4.95,4.65-4.95a4.761,4.761,0,0,1,.87.09V12.8C44.22,12.8,42.27,13.64,41.19,15.32Zm21.06-2.34v2.13A6.936,6.936,0,0,0,56.7,12.8c-4.59,0-8.1,3.06-8.1,7.71s3.51,7.77,8.1,7.77a7.052,7.052,0,0,0,5.37-2.13v.84c0,3.24-1.56,4.86-5.1,4.86a9.677,9.677,0,0,1-5.91-1.92l-1.68,2.82c1.83,1.5,4.8,2.28,7.8,2.28,5.61,0,8.64-2.64,8.64-8.46V12.98ZM57.27,25.1a4.542,4.542,0,0,1-4.89-4.59c0-2.7,2.04-4.53,4.89-4.53,2.82,0,4.86,1.83,4.86,4.53A4.533,4.533,0,0,1,57.27,25.1ZM85.8,21.08c0-5.01-3.42-8.28-8.1-8.28a7.967,7.967,0,0,0-8.28,8.19c0,4.77,3.48,8.22,8.85,8.22a8.12,8.12,0,0,0,6.45-2.61l-2.01-2.31a5.741,5.741,0,0,1-4.35,1.74c-2.79,0-4.74-1.5-5.19-3.84H85.74C85.77,21.83,85.8,21.38,85.8,21.08ZM77.7,15.8a4.361,4.361,0,0,1,4.53,3.9H73.14A4.428,4.428,0,0,1,77.7,15.8Zm27.9,10.02A9.4,9.4,0,1,1,99.63,9.26a8.853,8.853,0,0,1,6.57,2.49l.96-1.02A10.27,10.27,0,0,0,99.6,7.85c-6.36,0-11.01,4.53-11.01,10.65s4.65,10.65,10.98,10.65a10.811,10.811,0,0,0,7.5-2.7V18.59H105.6Zm12.99-12.6a9.552,9.552,0,0,0-6.27,2.22l.75,1.08a8.128,8.128,0,0,1,5.4-1.98c3.06,0,4.65,1.56,4.65,4.47v1.26h-5.37c-4.35,0-5.85,2.01-5.85,4.38,0,2.67,2.13,4.47,5.64,4.47,2.73,0,4.65-1.11,5.64-2.91V29h1.44V19.07C124.62,15.2,122.46,13.22,118.59,13.22Zm-.84,14.67c-2.76,0-4.35-1.26-4.35-3.3,0-1.8,1.14-3.15,4.38-3.15h5.34v2.94A5.367,5.367,0,0,1,117.75,27.89Zm14.49-11.13V13.34H130.8V29h1.5V20.84c0-3.87,2.07-6.18,5.55-6.18.12,0,.24.03.36.03V13.22C135.27,13.22,133.2,14.48,132.24,16.76Zm15.39-3.54a9.552,9.552,0,0,0-6.27,2.22l.75,1.08a8.128,8.128,0,0,1,5.4-1.98c3.06,0,4.65,1.56,4.65,4.47v1.26h-5.37c-4.35,0-5.85,2.01-5.85,4.38,0,2.67,2.13,4.47,5.64,4.47,2.73,0,4.65-1.11,5.64-2.91V29h1.44V19.07C153.66,15.2,151.5,13.22,147.63,13.22Zm-.84,14.67c-2.76,0-4.35-1.26-4.35-3.3,0-1.8,1.14-3.15,4.38-3.15h5.34v2.94A5.367,5.367,0,0,1,146.79,27.89Zm20.19-.93a3.6,3.6,0,0,1-2.43.87c-1.92,0-2.91-1.11-2.91-3.12V14.63h4.98V13.34h-4.98V9.92h-1.5v3.42h-2.88v1.29h2.88V24.86a3.884,3.884,0,0,0,4.26,4.26,4.752,4.752,0,0,0,3.21-1.11Zm17.49-5.85c0-4.65-3.18-7.89-7.47-7.89s-7.5,3.3-7.5,7.95a7.688,7.688,0,0,0,8.07,7.95,7.5,7.5,0,0,0,5.91-2.55l-.87-.99a6.7,6.7,0,0,1-11.64-4.05h13.47C184.44,21.38,184.47,21.23,184.47,21.11ZM177,14.54a5.92,5.92,0,0,1,6,5.82H171A5.919,5.919,0,0,1,177,14.54Z" transform="translate(0.39 -7.85)" fill="#fff"/>
-    </svg>
-    
+      </svg>
     </a>
     <button class="navbar-toggler menus-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
   
@@ -94,8 +94,7 @@
 			<h2 class="font-grosor">Conéctate con tus clientes</h2>
 		</div>
 		</div>
-
-	</main>
+  	</main>
     <!---section brandign-->
     <section class="container">
         <div class="row">
@@ -147,11 +146,14 @@ imprentas como asimismo independiente en proyectos de posicionamiento de marca
     <!---Section imagen-->
     <section id="construccion"class="container p-5">
         <div class="row">
-            <div class="col-12 text-alignconstruccion p-5">
+            <div class="col-12 col-md-6 text-alignconstruccion p-5">
             <h3 class="">Construcción 3d</h3>
             <p class="colorsecundario">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore odio, dolorem ipsa dolore repellat maxime, pariatur, doloribus, eum corporis quam ipsam porro veniam sit dolorum harum. Dicta reiciendis illum accusamus.</p>
             </div>
             <!--enlace externo para mostrar video sin auto play-->
+            <div class="col-12 col-md-6 embed-container">
+              <iframe title="vimeo-player" src="https://player.vimeo.com/video/584033784" frameborder="0" allowfullscreen></iframe>
+            </div>
             <div id="carouselExampleCaptions" class="col-md-8 corousel-imagenes carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
