--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta property="og:url"content="http://jorgegarate.elcajondelartesano.cl/">
     <meta property="og:image"content="http://jorgegarate.elcajondelartesano.cl/assets/img/carne.jpg">
     <meta property="og:description"content="Conoce los trabajos realizados por Jorge Garate en su portafolio web">
-
+    <meta name="theme-color" content="#000000"/>
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link  rel="icon"   href="assets/img/favicon.png" type="image/png"/>
