--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link  rel="icon"   href="assets/img/favicon.png" type="image/png"/>
     
-    <title>Jorge Garate Diseñador y desarrollador Web</title>
+    <title>Jorge Garate Diseñaasdasddesarrollador Web</title>
 </head>
 <body>
   
